--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            
+            height: 70dvh;
         }
         .card {
             background-color: #000000;
@@ -32,7 +32,7 @@
         }
         .card h1 {
             font-size: 24px;
-            margin-bottom: 10px;
+            margin-bottom: 35px;
             color: #ffffff;
         }
         .card h2 {
