--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,6 +112,9 @@
             if (simulatedTimeElement) {
                 simulatedTimeElement.textContent = "Hora Simulada: " + simulatedTime.toLocaleTimeString();
             }
+            console.log('Hora simulada enviada:', simulatedTime.toLocaleTimeString());
+
+            socket.emit('current_simulated_time', simulatedTime.toLocaleTimeString());
         }, 1000);
     
         socket.on('connect', () => {
