--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,10 +48,12 @@
             font-size: 16px;
             color: #e1e3e1;
         }
+
         .card p {
             font-size: 10px;
             color: #e1e3e1;
         }
+
         .logs {
             max-width: 400px;
             width: 100%;
@@ -78,8 +80,7 @@
             margin-bottom: 5px;
         }
     </style>
-    <!-- Incluir el script de Socket.IO -->
-    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script> <!-- Verifica la versión de Socket.IO -->
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 
 <body>
@@ -87,7 +88,7 @@
         <div class="card">
             <h1>Nombre del Nodo: {{ node_name }}</h1>
             <h2>Ip: {{ ip_address }}</h2>
-            <h3 id="simulated-time">Hora Simulada: {{ simulated_time }}</h3> 
+            <h3 id="simulated-time">Hora Simulada: {{ simulated_time }}</h3>
             <p>Creación Nodo Hora del Sistema: {{ system_time }}</p>
         </div>
         <div class="logs">
@@ -112,9 +113,9 @@
             if (simulatedTimeElement) {
                 simulatedTimeElement.textContent = "Hora Simulada: " + simulatedTime.toLocaleTimeString();
             }
+            
             console.log('Hora simulada enviada:', simulatedTime.toLocaleTimeString());
-    
-            // Formatear la hora simulada en formato HH:MM:SS
+            
             const formattedTime = pad(simulatedTime.getHours()) + ":" + pad(simulatedTime.getMinutes()) + ":" + pad(simulatedTime.getSeconds());
     
             socket.emit('current_simulated_time', formattedTime);
@@ -127,6 +128,15 @@
     
         socket.on('disconnect', () => {
             console.log('Desconectado del servidor WebSocket');
+    
+            // Añadir un log de desconexión
+            const logsList = document.getElementById('logs-list');
+            const simulatedTimeString = simulatedTime.toLocaleTimeString();
+            const message = "El servidor WebSocket se ha desconectado.";
+            
+            const listItem = document.createElement('li');
+            listItem.textContent = `[${simulatedTimeString}] ${message}`;
+            logsList.appendChild(listItem);  // Añadir al log
         });
     
         socket.on('connect_error', (error) => {
@@ -135,15 +145,11 @@
     
         // Modificar el mensaje del log para anteponer la hora simulada
         socket.on('log_message', (message) => {
+            console.log('Log recibido en el cliente:', message);
             const logsList = document.getElementById('logs-list');
-    
-            // Obtener la hora simulada actual
             const simulatedTimeString = simulatedTime.toLocaleTimeString();
-    
-            // Anteponer la hora simulada al mensaje del log
+            
             const modifiedMessage = `[${simulatedTimeString}] ${message}`;
-    
-            // Añadir el mensaje modificado al log
             const listItem = document.createElement('li');
             listItem.textContent = modifiedMessage;
             logsList.appendChild(listItem);
@@ -158,6 +164,7 @@
         }
     </script>
     
-    
+
 </body>
+
 </html>
