--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,7 +55,7 @@
         }
 
         .logs {
-            max-width: 400px;
+            max-width: 500px;
             width: 100%;
             text-align: left;
             background-color: #fff;
@@ -74,6 +74,7 @@
             list-style-type: none;
             padding: 0;
             margen: 0;
+            font-size: 12px;
         }
 
         .logs li {
