--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,77 +101,71 @@
 
     <script>
 
-const NODE_PORT = "{{ NODE_PORT }}";
-    const NODE_NAME = "{{ NODE_NAME }}";
-    const NODE_IP = "{{ NODE_IP }}";
-    const IP_COORDINATOR = "{{ IP_COORDINATOR }}";
+        const socketLogs = io('http://localhost:3000');
 
-    
-        const socketLogs = io("{{ IP_COORDINATOR }}");  // Utiliza la variable IP_COORDINATOR del archivo .env
+        const socketTime = io('http://localhost:5001');
 
-        const socketTime = io("http://{{ NODE_IP }}:{{ NODE_PORT }}");  // Utiliza las variables NODE_IP y NODE_PORT del archivo .env
-
-    
-        // Inicializar la hora simulada del nodo
         const simulatedTimeElement = document.getElementById("simulated-time");
         let simulatedTime = new Date();
         const [hour, minute, second] = "{{ simulated_time }}".split(':').map(Number);
         simulatedTime.setHours(hour, minute, second);
-    
+
+        socketTime.on('connect', () => {
+            console.log('Conectado al clienteFlask');
+        });
         // Incrementar el reloj cada segundo para mantenerlo actualizado
         setInterval(() => {
             simulatedTime.setSeconds(simulatedTime.getSeconds() + 1);
             if (simulatedTimeElement) {
                 simulatedTimeElement.textContent = "Hora Simulada: " + simulatedTime.toLocaleTimeString();
             }
-    
             console.log('Hora simulada enviada:', simulatedTime.toLocaleTimeString());
-    
+
             const formattedTime = pad(simulatedTime.getHours()) + ":" + pad(simulatedTime.getMinutes()) + ":" + pad(simulatedTime.getSeconds());
-    
+
             // Emitir la hora simulada al servidor Flask-Socket.IO
             socketTime.emit('current_simulated_time', formattedTime);
         }, 1000);
-    
-        // Eventos para la conexión de logs
+
+
         socketLogs.on('connect', () => {
-            console.log('Conectado al servidor de logs');
+            console.log('Conectado al servidor ws');
         });
-    
+
         socketLogs.on('disconnect', () => {
             console.log('Desconectado del servidor de logs');
-    
+
             const logsList = document.getElementById('logs-list');
             const simulatedTimeString = simulatedTime.toLocaleTimeString();
             const message = "El servidor WebSocket se ha desconectado.";
-    
+
             const listItem = document.createElement('li');
             listItem.textContent = `[${simulatedTimeString}] ${message}`;
             logsList.appendChild(listItem);  // Añadir al log
         });
-    
+
         socketLogs.on('connect_error', (error) => {
             console.error('Error de conexión con el servidor de logs:', error);
         });
-    
+
         socketLogs.on('log_message', (message) => {
             console.log('Log recibido:', message);
             const logsList = document.getElementById('logs-list');
             const simulatedTimeString = simulatedTime.toLocaleTimeString();
-    
+
             const modifiedMessage = `[${simulatedTimeString}] ${message}`;
             const listItem = document.createElement('li');
             listItem.textContent = modifiedMessage;
             logsList.appendChild(listItem);
         });
-    
+
         // Función para agregar ceros a la izquierda
         function pad(number) {
             return number < 10 ? '0' + number : '' + number;
         }
-    
+
     </script>
-    
+
 
 
 </body>
